Actions
Bug #6102
closedCrash when calling OpenSSL::Integer#to_der with nil value
Bug #6102:
Crash when calling OpenSSL::Integer#to_der with nil value
Description
ruby -ropenssl -e 'OpenSSL::Integer.new(nil).to_der'
crashes.
Updated by Anonymous about 14 years ago
- Status changed from Assigned to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r35159.
Martin, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- ext/openssl/ossl_asn1.c: raise TypeError when trying to encode nil
values for Primitive instances. - test/openssl/test_asn1.rb: Assert consistent behavior when
encoding nil values: Primitives raise TypeError, Constructives
raise NoMethodError.
Fixes [ruby-core:43009][Bug #6102]
-This line, and those below, will be ignored--
M test/openssl/test_asn1.rb
M ext/openssl/ossl_asn1.c
M ChangeLog
Actions