* ext/openssl/ossl_asn1.c: raise TypeError when trying to encode nil   values for Primitive instances. * test/openssl/test_asn1.rb: Assert consistent behavior when   encoding nil values: Primitives raise TypeError, Constructives   raise NoMethodError.   Fixes [ruby-core:43009][Bug #6102] -This line, and those below, will be ignored--

M    test/openssl/test_asn1.rb
M    ext/openssl/ossl_asn1.c
M    ChangeLog


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35159 b2dd03c8-39d4-4d8f-98ff-823fe69b080e